Implement quote section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
         </div>
 
         <div class = "quote">
+            <div class ="quote-content">Back to basics</div>
+            <div class ="quote-author">-Dong Hye Kim</div>
 
         </div>
 
