Implement action section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class = "left-main">
                         <div class = "main-text">This is a Dong Hye Kim fan page</div>
                         <div class = "main-subtext">Transdisciplinary designer whose work is driven by human centric design. His work draws inspiration from nature and technological advancements; he endeavors to expand subtleties into the field of industrial design and product design.</div>
-                        <button>Sign up</button>
+                        <button>Contact</button>
                     </div>
                     <div class = "right-main">
                         <img src="./images/image 8.png" alt="pear">
@@ -93,12 +93,26 @@
         </div>
 
         <div class = "quote">
-            <div class ="quote-content">Back to basics</div>
+            <div class ="quote-content">"Back to basics."</div>
             <div class ="quote-author">-Dong Hye Kim</div>
 
         </div>
 
         <div class ="action">
+
+            <div class ="action-body">
+                <div class = "action-text-container">
+                    <div class = "action-maintext">
+                        Please email for any opportunities.
+                    </div>
+                    <div class = "action-subtext">
+                        His design clients include: Fisker, Google, Amazon, YouTube, and UCLA.
+
+                    </div>
+                </div>
+                <button>Contact</button>
+            </div>
+
 
         </div>
 
