Implement footer and edit hero section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class = "hero">
             <div class = "header">
                 <div class = "left-logo">
-                    Dong Hye Kim
+                    do.
                 </div>
                 <ul class = "right-links">
                     <li> <a href="#">About</a></li>
@@ -23,7 +23,7 @@
             <div class = "main">
                 <div class = "main-container">
                     <div class = "left-main">
-                        <div class = "main-text">This is a Dong Hye Kim fan page</div>
+                        <div class = "main-text">Dong Hye Kim</div>
                         <div class = "main-subtext">Transdisciplinary designer whose work is driven by human centric design. His work draws inspiration from nature and technological advancements; he endeavors to expand subtleties into the field of industrial design and product design.</div>
                         <button>Contact</button>
                     </div>
@@ -117,7 +117,7 @@
         </div>
 
         <div class= "footer">
-            Copyright
+            Copyright © Dong Hye Kim
         </div>
         
     </body>
